// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwoLevels with first level selected 1`] = `
<div>
  <p
    className="input required text"
  >
    <label>
      region
    </label>
    <select
      className="input-large"
      name="state"
      onBlur={[Function]}
      onChange={[Function]}
      value="I Región"
    >
      <option
        disabled={true}
        value=""
      />
      <option
        value="I Región"
      >
        I Región
      </option>
      <option
        value="II Región"
      >
        II Región
      </option>
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      community
    </label>
    <select
      className="input-large"
      name="neighborhood"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    >
      <option
        disabled={undefined}
        value=""
      />
      <option
        value="Camiña___1150000"
      >
        Camiña
      </option>
      <option
        value="Colchane___1160000"
      >
        Colchane
      </option>
      <option
        value="Huara___1140000"
      >
        Huara
      </option>
      <option
        value="Iquique___1100000"
      >
        Iquique
      </option>
      <option
        value="Pica___1170000"
      >
        Pica
      </option>
    </select>
  </p>
</div>
`;

exports[`TwoLevels without first level selected 1`] = `
<div>
  <p
    className="input required text"
  >
    <label>
      region
    </label>
    <select
      className="input-large"
      name="state"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    >
      <option
        disabled={undefined}
        value=""
      />
      <option
        value="I Región"
      >
        I Región
      </option>
      <option
        value="II Región"
      >
        II Región
      </option>
    </select>
  </p>
  <p
    className="input required text"
  >
    <label>
      community
    </label>
    <select
      className="input-large"
      name="neighborhood"
      onBlur={[Function]}
      onChange={[Function]}
      value=""
    >
      <option
        disabled={undefined}
        value=""
      />
    </select>
  </p>
</div>
`;
